--- a/frontend/src/app/contas-vinculadas/liberacao/liberacao.component.css
+++ b/frontend/src/app/contas-vinculadas/liberacao/liberacao.component.css
@@ -12,7 +12,15 @@
 .cabecalho{
    
     font-weight: bold;
+    
 } 
+
+.inline-container{
+  display: inline-block;
+  align-items: center;
+}
+
+
 
 /* .modif:hover {
     background-color: #027333;
