--- a/frontend/src/app/contas-vinculadas/historico-provisao/historico-provisao.component.html
+++ b/frontend/src/app/contas-vinculadas/historico-provisao/historico-provisao.component.html
@@ -17,7 +17,7 @@
                             (closeHit)="toast.isShow = true"></app-toast>
                     </div>
                 </div>
-                <div *ngIf="provisaoEncontradaContrato.length === 0">
+                <div *ngIf="provisaoEncontradaContrato?.length === 0">
                     <div *ngIf="!loading && message">
                         <div *ngFor="let toast of toasts">
                             <app-toast [title]="toast.title" [message]="message"
@@ -28,50 +28,51 @@
                 </div>
 
             </div>
+            <h4>Provisões
+            </h4>
             <div class="md-12">
-                <table class="table table-hover">
+                <table class="table  table-striped table-hover">
                     <thead>
                         <tr>
                             <th scope="col">Empresa</th>
                             <th scope="col" class="text-center">Contrato</th>
                             <th scope="col" class="text-center">Início vigência</th>
                             <th scope="col" class="text-center">Fim vigência</th>
-                            <th scope="col" class="text-center">Total de provisão</th>
+                            <th scope="col" class="text-center">Total de provisão {{periodo}} </th>
+
                         </tr>
                     </thead>
-                    <!-- <tbody *ngIf="provisaoEncontradaContrato.length> 0">-->
-                    <tbody>
+                    <tbody *ngIf="provisaoEncontradaContrato != null">
                         <ng-container>
                             <tr>
-                                <td>UFBA</td>
-                                <td class="text-center"> 123456789
-                                <td class="text-center">01/04/2023</td>
-                                <td class="text-center"> 31/01/2024</td>
-                                <td class="text-center">2.131,29</td>
+                                <td *ngIf="provisaoEncontradaContrato.contrato.pessoaJuridica.nome">
+                                    {{ provisaoEncontradaContrato.contrato.pessoaJuridica.nome }}
+                                </td>
+                                <td class="text-center">
+                                    {{ provisaoEncontradaContrato.contrato.numero}}
+                                </td>
+                                <td class="text-center">
+                                    {{ provisaoEncontradaContrato.contrato.inicioVigencia | date:'dd/MM/yyyy' }}
+                                </td>
+                                <td class="text-center">
+                                    {{ provisaoEncontradaContrato.contrato.fimVigencia | date:'dd/MM/yyyy'}}
+                                </td>
+                                <td class="text-center">
+                                    {{ formatarNumero(somaTotalProvisaoMensal) }}
+                                </td>
                             </tr>
                         </ng-container>
+
                     </tbody>
                 </table>
             </div>
             <div class="md-12">
-                <h5 class="text-center">Empregados</h5>
-                <h5>Período da provisão: <input class="calendarResumo" type="month" id="monthYearInput"
-                    name="monthYear" formControlName="selectedPeriod"
-                    required>
-                 </h5>
-                <div class="input-group">
-                    <label for="quantitySelect" style="margin-right: 10px">Quantidade por página: </label>
-                    <select id="quantityPerPageSelectId" formControlName="selectedQtPag">
-                        <option value="10">10</option>
-                        <option value="20">20</option>
-                        <option value="30">30</option>
-                        <option value="60">60</option>
-                        <option value="120">120</option>
-                        <option value="240">240</option>
-                        <option value="480">480</option>
-                    </select>
-                </div>
-                <table title="Empregados" class="table table-striped table-hover">
+                <h5 class="text-center">Empregados</h5>                
+                <h5  class="inline">Mês da provisão: <input class="form-control form-control-lg small-input inputtipo" type="date" id="monthYearInput" name="monthYear"
+                        formControlName="selectedPeriod" [max]="getCurrentPeriod()"
+                        (change)="histoProvisao(provisaoEncontradaContrato.contrato.idContrato)" required>
+                </h5>                
+                <table title="Empregados" class="table table-hover">
                     <thead>
                         <tr>
                             <th scope="col">Nome</th>
@@ -84,76 +85,34 @@
                             <th scope="col" class="text-center">Inc.grupo A</th>
                             <th scope="col" class="text-center">Multa FGTS</th>
                             <th scope="col" class="text-center">Total</th>
+
                         </tr>
                     </thead>
-                    <!-- <tbody *ngFor="let provisoes of provisaoEncontradaContrato;let i = index">-->
-                    <tbody>
-                        <ng-container>
-                            <tr>
-                                <td>Carlos Henrique</td>
-                                <td class="text-center">Analista de sistemas</td>
-                                <td class="text-center">2.200</td>
-                                <td class="text-center">199,98</td>
-                                <td class="text-center">199,98</td>
-                                <td class="text-center">66,66</td>
-                                <td class="text-center">466,61</td>
-                                <td class="text-center">167,05</td>
-                                <td class="text-center">76,78</td>
-                                <td class="text-center">710,43</td>
-                            </tr>
-                            <tr>
-                                <td>Joel Pires</td>
-                                <td class="text-center">Analista de sistemas</td>
-                                <td class="text-center">2.200</td>
-                                <td class="text-center">199,98</td>
-                                <td class="text-center">199,98</td>
-                                <td class="text-center">66,66</td>
-                                <td class="text-center">466,61</td>
-                                <td class="text-center">167,05</td>
-                                <td class="text-center">76,78</td>
-                                <td class="text-center">710,43</td>
-                            </tr>
-                            <tr>
-                                <td>Lucas Oliveira</td>
-                                <td class="text-center">Analista de sistemas</td>
-                                <td class="text-center">2.200</td>
-                                <td class="text-center">199,98</td>
-                                <td class="text-center">199,98</td>
-                                <td class="text-center">66,66</td>
-                                <td class="text-center">466,61</td>
-                                <td class="text-center">167,05</td>
-                                <td class="text-center">76,78</td>
-                                <td class="text-center">710,43</td>
+
+                    <tbody *ngIf="provisaoEncontradaContrato && provisaoEncontradaContrato.funcionarioProvisionList">
+                        <ng-container
+                            *ngFor="let provisao of provisaoEncontradaContrato.funcionarioProvisionList; let i = index">
+                            <tr *ngIf="provisao.provisoes.length > 0">
+                                <td>{{ provisao.funcionario.pessoaFisica.nome }}</td>
+                                <td class="text-center">{{ provisao.provisoes[0].cargo }}</td>
+                                <td class="text-center">{{ formatarNumero(provisao.provisoes[0].remuneracao)}}</td>
+                                <td class="text-center">{{ formatarNumero(provisao.provisoes[0].decimo) }}</td>
+                                <td class="text-center">{{ formatarNumero(provisao.provisoes[0].ferias) }}</td>
+                                <td class="text-center">{{ formatarNumero(provisao.provisoes[0].abFerias) }}</td>
+                                <td class="text-center">{{ formatarNumero(provisao.provisoes[0].subTotal) }}</td>
+                                <td class="text-center">{{ formatarNumero(provisao.provisoes[0].incGrupoA) }}</td>
+                                <td class="text-center">{{ formatarNumero(provisao.provisoes[0].multaFGTS) }}</td>
+                                <td class="text-center">{{ formatarNumero(provisao.provisoes[0].totalProvisaoMensal)}}
+                                </td>
                             </tr>
                         </ng-container>
                     </tbody>
-                </table>
-                <div class="md-12">
-
-                    <nav aria-label="...">
-                        <button type="submit" (click)=" toGoBack()" [disabled]="loading && !loaded"
-                            class="btn btn-light">Voltar</button>
-
-                        <ul class="pagination justify-content-center ">
-                            <li class="page-item disabled" [class.disabled]="pagePosition == 0">
-                                <button class="page-link" (click)="prevPage()">Anterior</button>
-                            </li>
-                            <li class="page-item" *ngFor="let pagePositionOfList of pagesList">
-                                <button [style.font-weight]="is75Tile(pagePositionOfList) ? 'bold' : 'normal'"
-                                        class="page-link" [class.active]="pagePosition === pagePositionOfList"
-                                        (click)="changePage(pagePositionOfList)">{{ pagePositionOfList + 1 }}</button>
-                              </li>                              
-                            <li class="page-item">
-                                <button class="page-link"
-                                    [class.disabled]="pagePosition == pagesList[pagesList.length-1]"
-                                    (click)="nextPage()">Próxima</button>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-
-            </div>
+                </table>               
+                <button id="btnVoltarListFunciId" type="submit" (click)=" toGoBack()" [disabled]="loading && !loaded"
+                    class="btn btn-primary">Voltar</button>
+            
 
         </div>
+    </div>
     </form>
 </app-top-left-menu>
