--- a/frontend/src/app/contas-vinculadas/listar-funcionarios/listar-funcionarios.component.html
+++ b/frontend/src/app/contas-vinculadas/listar-funcionarios/listar-funcionarios.component.html
@@ -1,5 +1,4 @@
-<app-top-left-menu>
-  <form [formGroup]="form">
+<app-top-left-menu>  
     <div class="row">
       <div class="toast-container">
         <div *ngIf="!loading && errorMessage">
@@ -16,118 +15,128 @@
               (closeHit)="toast.isShow = true"></app-toast>
           </div>
         </div>
-        <div *ngIf="funcionariosEncontradoContrato.length === 0">
+        <div *ngIf="!loading">
           <div *ngIf="!loading && message">
             <div *ngFor="let toast of toasts">
               <app-toast [title]="toast.title" [message]="message"
                 [customClass]="toast.type === 'alert' ? 'error-toast' : 'alert-toast'"
-                (closeHit)="toast.isShow = true"></app-toast>
+                (closeHit)="clearMessage()"></app-toast>
             </div>
           </div>
         </div>
 
       </div>
       <div class="md-12">
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th scope="col">Empresa</th>
-            <th scope="col" class="text-center">Contrato</th>
-            <th scope="col" class="text-center">Início vigência</th>
-            <th scope="col" class="text-center">Fim vigência</th>
-            <th scope="col" class="text-center">Ação</th>
-          </tr>
-        </thead>
-
-        <tbody *ngIf="funcionariosEncontradoContrato.length > 0">
-          <ng-container>
+        <table class="table table-striped table-hover">
+          <thead>
             <tr>
-              <td *ngIf="funcionariosEncontradoContrato[0].contrato?.pessoaJuridica?.nome">
-                {{ funcionariosEncontradoContrato[0].contrato?.pessoaJuridica?.nome }}
-              </td>
-              <td class="text-center">
-                {{ funcionariosEncontradoContrato[0].contrato?.numero }}
-              </td>
-              <td class="text-center">
-                {{ funcionariosEncontradoContrato[0].contrato?.inicioVigencia | date:'dd/MM/yyyy' }}
-              </td>
-              <td class="text-center">
-                {{ funcionariosEncontradoContrato[0].contrato?.fimVigencia | date:'dd/MM/yyyy' }}
-              </td>
-              <td class="text-center">
-                <button id="btnHistProvisaoId" class="btn btn-primary" type="button"
-                (click)="histProvisao(funcionariosEncontradoContrato[0].contrato?.idContrato)">Histórico provisão</button>
-              </td>
+              <th scope="col">Empresa</th>
+              <th scope="col" class="text-center">Contrato</th>
+              <th scope="col" class="text-center">Início vigência</th>
+              <th scope="col" class="text-center">Fim vigência</th>
+              <th scope="col" class="text-center">Inc.grupo A</th>
+              <th scope="col" class="text-center">Ação</th>
             </tr>
-          </ng-container>
-        </tbody>
-      </table>
-    </div>
-      <div class="md-12">     
-        <h5 class="text-center">Empregados</h5>   
-        <div class="input-group">
-          <label for="quantitySelect" style="margin-right: 10px">Quantidade por página: </label>
-          <select id="quantityPerPageSelectId" formControlName="selectedQtPag">
-            <option value="10">10</option>
-            <option value="20">20</option>
-            <option value="30">30</option>
-            <option value="60">60</option>
-            <option value="120">120</option>
-            <option value="240">240</option>
-            <option value="480">480</option>
-          </select>
-        </div> 
-          <table title="Empregados" class="table table-striped table-hover">
-            <thead>
-              <tr>
-                <th scope="col">Nome</th>
-                <th scope="col" class="text-center">Cargo</th>
-                <th scope="col" class="text-center">Remuneração</th>
-                <th scope="col" class="text-center">Ação</th>
-              </tr>
-            </thead>
+          </thead>
 
-            <tbody *ngFor="let funcionario of funcionariosEncontradoContrato">
-              <ng-container>
-                <tr>
-                  <td>{{ funcionario.pessoaFisica?.nome }}</td>
-                  <td class="text-center">{{ funcionario.contratoTerceirizadoList[0]?.cargo }}</td>
-                  <td class="text-center">{{ funcionario.contratoTerceirizadoList[0]?.remuneracao }}</td>
-                  <td class="text-center">
-                    <button id="btnLiberacaoId" class="btn btn-primary mx-2" type="button"
-                      (click)="liberacao(funcionario.contrato?.idContrato)">Liberação</button>
-                    <button id="btnHistLibercaoId" class="btn btn-primary"  type="button"
-                    (click)="histLiberacao(funcionario.contrato?.idContrato)">Histórico de liberação</button>
-                  </td>
-                </tr>
-              </ng-container>
-            </tbody>
-          </table>
+          <tbody *ngIf="funcionariosEncontradoContrato.length > 0">
+            <ng-container>
+              <tr>
+                <td title={{funcionariosEncontradoContrato[0].contrato?.pessoaJuridica?.nome}}
+                  *ngIf="funcionariosEncontradoContrato[0].contrato?.pessoaJuridica?.nome">
+                  {{ truncateText(funcionariosEncontradoContrato[0].contrato?.pessoaJuridica?.nome || '') }}
+                </td>
+                <td class="text-center">
+                  {{ funcionariosEncontradoContrato[0].contrato?.numero }}
+                </td>
+                <td class="text-center">
+                  {{ funcionariosEncontradoContrato[0].contrato?.inicioVigencia | date:'dd/MM/yyyy' }}
+                </td>
+                <td class="text-center">
+                  {{ funcionariosEncontradoContrato[0].contrato?.fimVigencia | date:'dd/MM/yyyy' }}
+                </td>
+                <td class="text-center">
+                  {{ incGrupoA }}
+                </td>
+                <td class="text-center">
+                  <button id="btnHistProvisaoId" class="btn btn-primary mx-1 btn-custom" type="button"
+                    (click)="histProvisao(funcionariosEncontradoContrato[0].contrato?.idContrato)">Provisões</button>
+                  <button id="btnHistLibercaoId" class="btn btn-primary  mx-1 btn-custom" type="button"
+                    (click)="histLiberacao(funcionariosEncontradoContrato[0].contrato?.idContrato)">Liberações</button>
+                  <button id="btnIncGrupAId" class="btn btn-primary  mx-1 btn-custom" type="button"
+                    (click)="adicionarIncGrupoA(funcionariosEncontradoContrato[0].contrato?.idContrato)">Adicionar
+                    inc.grupo
+                    A</button>
+                  <button id="btnAdicionarFuncionarioId" class="btn btn-primary  btn-custom mx-1" type="button"
+                    (click)="adicionarFuncionario(funcionariosEncontradoContrato[0].contrato?.idContrato)">Adicionar
+                    funcionário</button>
+              </tr> 
+            </ng-container>
+          </tbody>
+        </table>
+      </div>
+      <div class="md-12">
+        <h5 class="text-center">Empregados</h5>       
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Nome</th>
+              <th scope="col" class="text-center">CPF</th>
+              <th scope="col" class="text-center">Data início</th>
+              <th scope="col" class="text-center">Cargo</th>
+              <th scope="col" class="text-center">Remuneração</th>
+              <th scope="col" class="text-center">Ação</th>
+            </tr>
+          </thead>
+
+          <tbody *ngFor="let funcionario of funcionariosEncontradoContrato let i = index">            
+            <tr>
+                <th>{{ funcionario.pessoaFisica?.nome }}</th>
+                <th class="text-center">{{ funcionario.pessoaFisica?.cpf }}</th>
+                <th class="text-center">{{ funcionario.contratoTerceirizadoList[0].dataInicio  | date:'dd/MM/yyyy' }}</th>
+                <th class="text-center">{{ funcionario.contratoTerceirizadoList[0]?.cargo }}</th>
+                <th class="text-center">{{ formatarNumero(funcionario.contratoTerceirizadoList[0]?.remuneracao) }}</th>
+                <th *ngIf="!funcionario.contratoTerceirizadoList[0]?.dataDesligamento" class="text-left">
+                 <button id="btnAddNovoTermoAditivoId" class="btn btn-primary btn-custom mx-1" type="button"
+                    (click)="novoTermoAditivo(funcionario.contrato?.idContrato,funcionario.pessoaFisica?.cpf)">Novo
+                    termo aditivo</button>
+                  <button id="btnEditarfuncionarioId" class="btn btn-primary btn-custom mx-1" type="button"
+                    (click)="editarFuncionario(funcionario.pessoaFisica?.cpf)">Editar funcionário</button>
+                  <app-modal [title]="'Confirmação'" [body]="'Tem certeza que deseja desligar o funcionário ' + (funcionario?.pessoaFisica?.nome || '') +'?'" 
+                    [yesButton]="'Sim'" [noButton]="'Não'" [context]="this" [buttonTitle]="'Desligar'" [id]="i"
+                    id="btnDesligarId" [buttonClass]="'btn btn-secondary btn-sm'"
+                    [enabled]="!funcionario.contratoTerceirizadoList?.id"></app-modal>
+                  <app-modal [title]="'Confirmação'" [body]='"Tem certeza que deseja deletar essa associação?"'
+                    [yesButton]="'Sim'" [noButton]="'Não'" [context]="this" [buttonTitle]="'Deletar'" [id]="i"
+                    id="btndeletarConTercerizadoId" [buttonClass]="'btn btn-danger btn-sm mx-1'"
+                    [enabled]="!funcionario.contratoTerceirizadoList?.id"></app-modal>
+                </th>
+                <th *ngIf="funcionario.contratoTerceirizadoList[0]?.dataDesligamento" class="text-center">                  
+                  <label class="texto-vermelho">{{'Desligado ' +
+                    (funcionario.contratoTerceirizadoList[0]?.dataDesligamento | date:'dd/MM/yyyy') }} </label>
+                </th>
+              </tr>             
+            <ng-container *ngFor="let funcionarioSecundaria of funcionario.contratoTerceirizadoList.slice(1); let j = index">
+              
+              <tr *ngIf="funcionario.contratoTerceirizadoList.length > 1">
+                  <td></td>
+                  <td></td>
+                  <td class="text-center">{{ funcionarioSecundaria.dataInicio  | date:'dd/MM/yyyy' }}</td>
+                  <td class="text-center">{{ funcionarioSecundaria?.cargo ? funcionarioSecundaria.cargo :
+                      ''}}</td>
+                  <td class="text-center">{{ funcionarioSecundaria?.remuneracao ?
+                      formatarNumero(funcionarioSecundaria.remuneracao) : '' }}</td>
+                      <td></td>
+                  </tr>
+          </ng-container>               
+        </tbody>
+        </table>
         <div class="md-12">
-          
           <nav aria-label="...">
             <button id="btnVoltarPesquContId" type="submit" (click)=" toGoBack()" [disabled]="loading && !loaded"
-            class="btn btn-light">Voltar</button>
-            
-            <ul class="pagination justify-content-center ">
-              <li class="page-item disabled" [class.disabled]="pagePosition == 0">
-                <button class="page-link" (click)="prevPage()">Anterior</button>
-              </li>
-              <li class="page-item" *ngFor="let pagePositionOfList of pagesList">
-                <button [style.font-weight]="is75Tile(pagePositionOfList) ? 'bold' : 'normal'"
-                        class="page-link" [class.active]="pagePosition === pagePositionOfList"
-                        (click)="changePage(pagePositionOfList)">{{ pagePositionOfList + 1 }}</button>
-              </li>             
-              <li class="page-item">
-                <button class="page-link" [class.disabled]="pagePosition == pagesList[pagesList.length-1]"
-                  (click)="nextPage()">Próxima</button>
-              </li>
-            </ul>
+              class="btn btn-primary">Voltar</button>           
           </nav>
         </div>
-
       </div>
-
     </div>
-  </form>
-</app-top-left-menu>
+ </app-top-left-menu>
