--- a/frontend/src/app/contas-vinculadas/login/login.component.html
+++ b/frontend/src/app/contas-vinculadas/login/login.component.html
@@ -7,7 +7,7 @@
         <div class="centralizado"> 
             
             <img class="banner" src="../../assets/img/bahia.png" alt="">
-            <img class ="banner" src="../../assets/img/AJGeSocial+.png" alt="">
+            <img class ="banner1"  src="../../assets/img/ContaVinculada.png" alt="">
             <h5>Núcleo de Administração Financeira e Patrimonial (NUCAF)</h5>
             <div *ngIf="loading" class="spinner-grow" role="status">
                 <span class="visually-hidden">Loading...</span>
@@ -15,13 +15,23 @@
         </div>
 
         <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <div class="input-group-text sm">
-                    <select id="sectionId" style="text-transform: uppercase;" class="form-select form-select-sm" aria-label="Selecione a seção">
-                        <option selected value="jfba">jfba</option>
-                        <option value=""></option>
-                    </select>
-                </div>
+            <div class="input-group-text sm">
+                <select id="sectionId" style="text-transform: uppercase;" class="form-select form-select-sm" aria-label="Selecione a seção">
+                    <option selected value="jfba">jfba</option>
+                    <option value="sjac">sjac</option>
+                    <option value="sjam">sjam</option>
+                    <option value="sjap">sjap</option>
+                    <option value="sjdf">sjdf</option>
+                    <option value="sjgo">sjgo</option>
+                    <option value="sjma">sjma</option>
+                    <option value="sjmt">sjmt</option>
+                    <option value="sjpa">sjpa</option>
+                    <option value="sjpi">sjpi</option>
+                    <option value="sjro">sjro</option>
+                    <option value="sjrr">sjrr</option>
+                    <option value="sjto">sjto</option>
+                    <option value=""></option>
+                </select>
             </div>
             <input type="text" formControlName="username"
                 [ngClass]="{ 'is-invalid': submitted && controls['username'].errors }" class="form-control form-control-sm campo"
