refact: database initialization

--- a/frontend/src/app/contas-vinculadas/inc-grupo-a/inc-grupo-a.component.html
+++ b/frontend/src/app/contas-vinculadas/inc-grupo-a/inc-grupo-a.component.html
@@ -5,7 +5,7 @@
                 <h4>Adicionar incidência grupo A</h4>
                 <label for="nome">Incidência grupo A</label>
                 <input type="text" class="form-control form-control-lg small-input" id="incGrupoA"
-                    aria-label="incGrupoA" placeholder="Ex. 35/35.80" aria-describedby="basic-addon1"
+                    aria-label="incGrupoA" placeholder="Ex. 35.80" aria-describedby="basic-addon1"
                     formControlName="incGrupoA" required pattern="[0-9]+([.][0-9]+)?">
                 <label for="nome">Data</label>
                 <input type="date" class="form-control form-control-lg small-input" id="data" aria-label="data"
