--- a/frontend/src/app/contas-vinculadas/shared/top-left-menu/top-left-menu.component.html
+++ b/frontend/src/app/contas-vinculadas/shared/top-left-menu/top-left-menu.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="left-component d-flex flex-column flex-shrink-0 p-3 text-white bg-dark">
             <div class="sistema">Controle de Conta Vinculada</div>
-            <div class="setor">Seção de Registros Financeiros (SERFI)</div>
+            <div class="setor">Setor da orgnização</div>
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
