--- a/frontend/src/app/contas-vinculadas/login/login.component.html
+++ b/frontend/src/app/contas-vinculadas/login/login.component.html
@@ -6,9 +6,9 @@
         
         <div class="centralizado"> 
             
-            <img class="banner" src="../../assets/img/bahia.png" alt="">
+            <!--img class="banner" src="../../assets/img/bahia.png" alt="" -->
             <img class ="banner1"  src="../../assets/img/ContaVinculada.png" alt="">
-            <h5>Núcleo de Administração Financeira e Patrimonial (NUCAF)</h5>
+            <h5>Setor da organização</h5>
             <div *ngIf="loading" class="spinner-grow" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
@@ -17,20 +17,8 @@
         <div class="input-group mb-3">
             <div class="input-group-text sm">
                 <select id="sectionId" style="text-transform: uppercase;" class="form-select form-select-sm" aria-label="Selecione a seção">
-                    <option selected value="jfba">jfba</option>
-                    <option value="sjac">sjac</option>
-                    <option value="sjam">sjam</option>
-                    <option value="sjap">sjap</option>
-                    <option value="sjdf">sjdf</option>
-                    <option value="sjgo">sjgo</option>
-                    <option value="sjma">sjma</option>
-                    <option value="sjmt">sjmt</option>
-                    <option value="sjpa">sjpa</option>
-                    <option value="sjpi">sjpi</option>
-                    <option value="sjro">sjro</option>
-                    <option value="sjrr">sjrr</option>
-                    <option value="sjto">sjto</option>
                     <option value=""></option>
+                    <option selected value="prefix">prefixo</option>
                 </select>
             </div>
             <input type="text" formControlName="username"
